SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Set__c/CPQ_Pricing_Set__c.object-meta.xml
<CustomObject>
    <description>Set of Pricing Thresholds to use in product pricing. Dictates what field on which to tier and how the tiering will ultimately produce the Total Price</description>
    <label>CPQ Pricing Set</label>
    <nameField>
        <label>CPQ Pricing Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Pricing Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>