SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Set__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier to which Price Book Entries can map</description>
    <inlineHelpText>Unique identifier to which Price Book Entries can map.</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>