SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Set__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if set is active and should be enforced in CPQ</description>
    <inlineHelpText>Determines if set is active and should be enforced in CPQ</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>