SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Set__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pricebook to which the Pricing Set belongs</description>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>CPQ Pricing Sets</relationshipLabel>
    <relationshipName>CPQ_Pricing_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>