SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Set__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <description>Determines behavior of underlying Pricing Threshold records. &quot;Single Tier&quot; means that the first Pricing Threshold found that is met will set the price for all units of the Tiering Field. &quot;Cumulative&quot; means that each Pricing Threshold found that is met will set the price for the units of Tiering Field that correspond to its threshold.</description>
    <inlineHelpText>Determines behavior of underlying Pricing Threshold records. &quot;Single Tier&quot; means that the first Pricing Threshold found that is met will set the price for all units of the Tiering Field. &quot;Cumulative&quot; means that each Pricing Threshold found that is met will set the price for the units of Tiering Field that correspond to its threshold.</inlineHelpText>
    <label>Pricing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cumulative</fullName>
            </value>
            <value>
                <fullName>Single Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>