SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Set__c/fields/Tiering_Field__c.field-meta.xml
<CustomField>
    <fullName>Tiering_Field__c</fullName>
    <description>QuoteLineItem Field API Name or CPQ Product Attribute that is used to determine the comparing value for the underlying Pricing Threshold records</description>
    <inlineHelpText>QuoteLineItem Field API Name or CPQ Product Attribute that is used to determine the comparing value for the underlying Pricing Threshold records</inlineHelpText>
    <label>Tiering Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>